<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".presentation.registration.RegistrationActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/logo_description"
        />

    <EditText

        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:hint="@string/account_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/dark_gray_text"
        tools:ignore="LabelFor" />

    <EditText

        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:password="true"
        android:textColorHint="@color/dark_gray_text"
        tools:ignore="LabelFor" />

    <EditText

        android:id="@+id/repeat_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:hint="@string/repeat_password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:password="true"
        android:textColorHint="@color/dark_gray_text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:text="@string/registration_button" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:onClick="gotoLogin"
        android:text="@string/login_button" />
</LinearLayout>