<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_name"
        android:textColorHint="@color/dark_gray_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_button"
        android:onClick="loginButton"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:password="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/login_text"
        app:layout_constraintStart_toStartOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="162dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/login_text"
        app:layout_constraintEnd_toEndOf="@+id/login_text"
        app:layout_constraintStart_toStartOf="@+id/login_text"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/registration_screen_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="gotoRegistration"
        android:text="@string/registration_screen_button"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/log_in_button"
        app:layout_constraintStart_toStartOf="@+id/log_in_button"
        app:layout_constraintTop_toBottomOf="@+id/log_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>